name: yesod-paypal-rest
version: 0.1.0
synopsis: Yesod plugin to use PayPal with the paypal-rest-client library.
license: MIT
license-file: LICENSE
author: Braden Walters
maintainer: vc@braden-walters.info
category: Yesod
stability: experimental
build-type: Simple
cabal-version: >= 1.10
Tested-With: GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1

library
  exposed-modules: Yesod.Payments.PayPal
  build-depends:
      base >= 4 && < 5
    , yesod-core >= 1.2 && < 1.5
    , paypal-rest-client < 1.0.0
    , time >= 1.5 && < 1.7
  hs-source-dirs: src
  default-language: Haskell2010
